jj-55094908 Исправление ошибок. Интеграционные тесты для сервисов